2003-12-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink-mirrors.info.in: adjust dependency

2003-12-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.0.4 of fink-mirrors

2003-12-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in:  Write the new mirror choices to the config file
	at the end of the process! (oops)

2003-12-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.0.3 of fink-mirrors

2003-12-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in: Explicitly include the perl library path

2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Releasing version 0.0.2 of fink-mirrors

2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* COPYING, README, README.buildsystem, VERSION, fink-mirrors.info.in, 
	inject.pl, install.sh, postinstall.pl.in: files to create a separate 
	fink-mirrors package which can be updated independently of fink 
	releases.

2003-11-28 David H. <dmalloc@users.sourceforge.net>
	* Adding full mirror in Perth, Austrial
		Maintainer:
		Matthew Healey
		matt_h@mac.com
	* Addding distfiles mirror in Lancester, UK
		Maintainer:
		Yang He
		 tech-staff@mirror.ac.uk
	This is part of mirrors.ac.uk.

2003-11-24 David H. <dmalloc@users.sourceforge.net>
	* rjk admin reported that the server is now fixed.

2003-11-21 David H. <dmalloc@users.sourceforge.net>
	* New rsync policy is in effect. The flags
		--delete --delete-after -az
		are now mandatory.
		Mailed all mirrors so they can heed this.
		
2003-11-20 David H. <dmalloc@users.sourceforge.net>
	* Corrected all entries to have upper case ISO
		country codes, because the _keys file
		says so.

2003-11-20 David H. <dmalloc@users.sourceforge.net>
	* Added full mirror in Norway (rsync/distfiles)
		trd.no.eu.finkmirrors.net
		Maintainer:
		Harvar Valeur
		havarv@idi.ntnu.no
		
2003-11-19 David H. <dmalloc@users.sourceforge.net>