@@ -1,3 +1,7 @@
+2004-01-01  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* all: updated Copyright notice
+
 2003-12-29  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* fink-mirrors.info.in: adjust dependency
